<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="55dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="180dp"
        >



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_style_white"
                android:hint="@string/email_login"
                android:id="@+id/input_email_login"
                android:textSize="15sp"/>




            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_style_white"
                android:hint="@string/password_login"
                android:id="@+id/input_password_login"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/Login"
            android:id="@+id/input_button_login"
            android:padding="15dp"
            android:background="@drawable/button_style"
            android:textColor="@color/colorWhite"


            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:id="@+id/login_textview"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"

        />


</RelativeLayout>