<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="55dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"
        >


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/firstname"
            android:id="@+id/input_firstname_signup"
            android:textSize="15sp"
            android:background="@drawable/edit_text_style_white"
            android:layout_marginBottom="10dp"

            />




            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/lastname"
                android:id="@+id/input_lastname_signup"
                android:textSize="15sp"
                android:background="@drawable/edit_text_style_white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />





            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_signup"
                android:id="@+id/input_email_signup"
                android:textSize="15sp"
                android:background="@drawable/edit_text_style_white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />




            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_signup"
                android:id="@+id/input_password_signup"
                android:textSize="15sp"
                android:background="@drawable/edit_text_style_white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_confirm_signup"
            android:id="@+id/input_password_confirm_signup"
            android:textSize="15sp"
            android:background="@drawable/edit_text_style_white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="60dp">

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/student_checkbox"

            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student"
                android:textColor="@color/colorWhite"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            >


            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teacher_checkbox"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Teacher"
                android:textColor="@color/colorWhite"
                />


        </LinearLayout>

    </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/signup"
            android:id="@+id/input_button_signup"
            android:padding="15dp"
            android:background="@drawable/button_style"
            android:textColor="@color/colorWhite"
            />




    </LinearLayout>

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/signup_progress_bar"
        android:layout_centerInParent="true"
        />



</RelativeLayout>